@@ -201,7 +201,7 @@ Song AlbumsPage::coverRequest() const
 
 void AlbumsPage::addSelectionToPlaylist(const QString &name, bool replace, quint8 priorty, bool randomAlbums)
 {
-    QStringList files=selectedFiles(true, randomAlbums);
+    QStringList files=selectedFiles(name.isEmpty(), randomAlbums);
 
     if (!files.isEmpty()) {
         if (name.isEmpty()) {
